Bug 398730 - creating copy from existing image loses ability to undo/redo
Summary: creating copy from existing image loses ability to undo/redo
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: 4.1.1
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-09-16 18:25 UTC by wkg28406
Modified: 2018-09-24 07:24 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description wkg28406 2018-09-16 18:25:53 UTC
Krita 4.1.1-4 (Arch Linux)

Tested with fresh configuration (removing existing ~/.local/share/krita, ~/.config/krita*)

Reproducible: Always

Steps:
1. Create new document
2. File > Create Copy From Current Image
3. Perform action, such as drawing on canvas with brush tool
4. Try to undo/redo (ctrl+z/ctrl+shift+z or Edit > Undo/Redo)

Results:
Action not undone/redone.

Expected:
Action undone/redone.

Unknown if this is intended behavior.
Unknown if just undo/redo is affected, or other shortcuts are.

If 'Undo History' docker is enabled, nothing is added to it.
(Settings > Dockers > Undo History)
Comment 1 Halla Rempt 2018-09-17 08:23:33 UTC
Hi,

I can confirm the issue. I think the undo steps still are attached to the original image.
Comment 2 Dmitry Kazakov 2018-09-17 11:31:57 UTC
Git commit 8ec26ecd49b768cccbda1ec857a19fafb42843fa by Dmitry Kazakov.
Committed on 17/09/2018 at 11:31.
Pushed by dkazakov into branch 'master'.

Fix undo in the cloned KisDocument

We should always initialize KisDocumentUndoAdapter in the
image :)

M  +2    -0    libs/ui/KisDocument.cpp

https://commits.kde.org/krita/8ec26ecd49b768cccbda1ec857a19fafb42843fa
Comment 3 Halla Rempt 2018-09-24 07:24:54 UTC
Git commit 52d9592fccf2864d6bde22267d35f343191a6933 by Boudewijn Rempt, on behalf of Dmitry Kazakov.
Committed on 24/09/2018 at 06:57.
Pushed by rempt into branch 'krita/4.1'.

Fix undo in the cloned KisDocument

We should always initialize KisDocumentUndoAdapter in the
image :)

M  +2    -0    libs/ui/KisDocument.cpp

https://commits.kde.org/krita/52d9592fccf2864d6bde22267d35f343191a6933