Fix undo in the cloned KisDocument

We should always initialize KisDocumentUndoAdapter in the
image :)

BUG:398730